--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Asian Cuisine</title>
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Philosopher|Spectral+SC" rel="stylesheet">
     <link rel="icon" href="download.png" type="image/gif" sizes="18x18">
-    <link href="https://eightblades.github.io/ref.css" rel="stylesheet" type="text/css"/>
+    <link href="https://eightblades.github.io/index.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div id="mySidenav" class="sidenav">
