--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="https://eightblades.github.io/index.html">Food</a>
+      <a href="linux-ref.html">Linux Reference</a>
     </div>
 
 <span style="position: fixed; top: 0; background-color: white; padding-right: 100%" onclick="openNav()"><div></div>
