--- a/linux-ref.html
+++ b/linux-ref.html
@@ -8,6 +8,12 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:900|Philosopher|Spectral+SC" rel="stylesheet">
   </head>
   <body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.html">Home</a>
+      <a href="https://eightblades.github.io/index.html">Food</a>
+      <a href="linux-ref.html">Linux Reference</a>
+    </div>
     <script src="index.js"></script>
     <h1 class="center hff" id="PH">Linux Reference Page</h1>
     
