--- a/linux-ref.html
+++ b/linux-ref.html
@@ -15,7 +15,8 @@
       <a href="linux-ref.html">Linux Reference</a>
     </div>
     <script src="index.js"></script>
-    <h1 class="center hff" id="PH">Linux Reference Page</h1>
+    <h1  id="PH">Linux Reference Page</h1>
+    <!––<h1 class="center hff" id="PH">Linux Reference Page</h1>-->
     
     
     <a href="http://rpi02/sp1a/">Home Page</a>
