--- a/linux-ref.html
+++ b/linux-ref.html
@@ -16,7 +16,7 @@
     </div>
     <script src="index.js"></script>
     <h1  id="PH">Linux Reference Page</h1>
-    <!––<h1 class="center hff" id="PH">Linux Reference Page</h1>-->
+    <!–– "<h1 class="center hff" id="PH">Linux Reference Page</h1>" -->
     
     
     <a href="http://rpi02/sp1a/">Home Page</a>
