--- a/linux-ref.html
+++ b/linux-ref.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Linux Reference</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="linux-ref.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:900|Philosopher|Spectral+SC" rel="stylesheet">
   </head>
   <body>
@@ -15,8 +15,7 @@
       <a href="linux-ref.html">Linux Reference</a>
     </div>
     <script src="index.js"></script>
-    <h1  id="PH">Linux Reference Page</h1>
-    <!–– "<h1 class="center hff" id="PH">Linux Reference Page</h1>" -->
+    <h1 class="center hff" id="PH">Linux Reference Page</h1>"
     
     
     <a href="http://rpi02/sp1a/">Home Page</a>
