--- a/linux-ref.html
+++ b/linux-ref.html
@@ -22,7 +22,7 @@
     
     
     <h2 class="hff">Reference Table</h2>
-    <table>
+    <table style:"width:100%">
       <tr>
         <th class="hf">Name</th>
         <th class="hf">Syntax</th>
