--- a/linux-ref.html
+++ b/linux-ref.html
@@ -30,87 +30,81 @@
         <th class="hf">Example</th>
       </tr>
       <tr>
-        <td><a href="#P13">HTML</a></td>
+        <td><a>HTML</a></td>
         <td>&lt;html&gt;</td>
         <td>&lt;/html&gt;</td>
         <td>&lt;html&gt;&lt;body&gt;&lt;/body&gt;&lt;/html&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P14">Head</a></td>
+        <td><a>Head</a></td>
         <td>&lt;head&gt;</td>
         <td>&lt;/head&gt;</td>
         <td>&lt;head&gt;&lt;title&gt;&lt;/title&gt;&lt;/head&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P2">Title</a></td>
+        <td><a>Title</a></td>
         <td>&lt;title&gt;</td>
         <td>&lt;/title&gt;</td>
         <td>&lt;title&gt;Reference Page&lt;/title&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P15">Body</a></td>
+        <td><a>Body</a></td>
         <td>&lt;body&gt;</td>
         <td>&lt;/body&gt;</td>
         <td>&lt;body&gt;&lt;p&gt;This is a Paragraph&lt;/p&gt;&lt;/body&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P3">Headings</a></td>
+        <td><a>Headings</a></td>
         <td>&lt;h1&gt;-&lt;h6&gt;</td>
         <td>&lt;/h1&gt;-&lt;/h6&gt;</td>
         <td>&lt;h1&gt;This is a heading&lt;/h1&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P4">Paragraph</a></td>
+        <td><a>Paragraph</a></td>
         <td>&lt;p&gt;</td>
         <td>&lt;/p&gt;</td>
         <td>&lt;p&gt;This is a Paragraph&lt;/p&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P5">Breaks</a></td>
+        <td><a>Breaks</a></td>
         <td>&lt;br&gt;</td>
         <td>N/A</td>
         <td>&lt;p&gt;asdf&lt;/p&gt;&lt;br&gt;&lt;p&gt;asdf&lt;/p&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P6">Lines</a></td>
+        <td><a>Lines</a></td>
         <td>&lt;hr&gt;</td>
         <td>N/A</td>
         <td>&lt;p&gt;asdf&lt;/p&gt;&lt;hr&gt;&lt;p&gt;asdf&lt;/p&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P7">Comments</a></td>
+        <td><a>Comments</a></td>
         <td>&lt;!--</td>
         <td>--&gt;</td>
         <td>&lt;!-- This is a comment --&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P8">Links</a></td>
+        <td><a>Links</a></td>
         <td>&lt;a&gt;</td>
         <td>&lt;/a&gt;</td>
         <td>&lt;a href="url"&gt;Name of link&lt;/a&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P9">Images</a></td>
+        <td><a>Images</a></td>
         <td>&lt;img&gt;</td>
         <td>N/A</td>
         <td>&lt;img scr="image url"&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P10">Lists</a></td>
+        <td><a>Lists</a></td>
         <td>&lt;ol&gt;,&lt;ul&gt;,&lt;li&gt;</td>
         <td>&lt;/ol&gt;,&lt;/ul&gt;,&lt;/li&gt;</td>
         <td>&lt;ol&gt;&lt;li&gt;Bob&lt;/li&gt;&lt;/ol&gt;</td>
       </tr>
       <tr>
-        <td><a href="#P11">Tables</a></td>
+        <td><a>Tables</a></td>
         <td>&lt;table&gt;,&lt;th&gt;,&lt;tr&gt;,&lt;td&gt;</td>
         <td>&lt;/table&gt;,&lt;/th&gt;,&lt;/tr&gt;,&lt;/td&gt;</td>
         <td>&lt;table&gt;&lt;tr&gt;&lt;th&gt;Table Heading&lt;/tr&gt;&lt;/tr&gt;&lt;/table&gt;</td>
-      </tr>
-      <tr>
-        <td><a href="#P12">Blocks</a></td>
-        <td>&lt;div&gt;</td>
-        <td>&lt;/div&gt;</td>
-        <td>&lt;div style="color:blue"&gt;BOBOBOOB&lt;/div&gt;</td>
       </tr>
     </table>
