--- a/linux-ref.html
+++ b/linux-ref.html
@@ -14,6 +14,15 @@
       <a href="https://eightblades.github.io/index.html">Food</a>
       <a href="linux-ref.html">Linux Reference</a>
     </div>
+    <span style="position: fixed; top: 0; background-color: white; padding-right: 100%" onclick="openNav()"><div></div>
+<div></div>
+<div></div>
+<div class="container" onclick="myFunction(this)">
+  <div class="bar1"></div>
+  <div class="bar2"></div>
+  <div class="bar3"></div>
+</div>
+</span>
     <script src="index.js"></script>
     <h1 class="center hff" id="PH">Linux Reference Page</h1>
     
