--- a/linux-ref.html
+++ b/linux-ref.html
@@ -30,87 +30,58 @@
     <h2 class="hff">Reference Table</h2>
     <table style="width:100%">
       <tr>
-        <th class="hf">Name</th>
-        <th class="hf">Syntax</th>
+        <th class="hf">Command</th>
         <th class="hf">Description</th>
         <th class="hf">Example</th>
       </tr>
       <tr>
-        <td><a>HTML</a></td>
-        <td>&lt;html&gt;</td>
-        <td>&lt;/html&gt;</td>
-        <td>&lt;html&gt;&lt;body&gt;&lt;/body&gt;&lt;/html&gt;</td>
+        <td><a>cd</a></td>
+        <td>Brings the user to the specified diretory and to the user home directory if none is specified</td>
+        <td>cd scripts</td>
       </tr>
       <tr>
-        <td><a>Head</a></td>
-        <td>&lt;head&gt;</td>
-        <td>&lt;/head&gt;</td>
-        <td>&lt;head&gt;&lt;title&gt;&lt;/title&gt;&lt;/head&gt;</td>
+        <td><a>ls</a></td>
+        <td>Lists all the files or directories inside the specified directory</td>
+        <td>ls website</td>
       </tr>
       <tr>
-        <td><a>Title</a></td>
-        <td>&lt;title&gt;</td>
-        <td>&lt;/title&gt;</td>
-        <td>&lt;title&gt;Reference Page&lt;/title&gt;</td>
+        <td><a>nano</a></td>
+        <td>Allows the user to edit a specified file. If the named file does not already exist, it will create a new file and name it the given name. </td>
+        <td>nano website.html</td>
       </tr>
       <tr>
-        <td><a>Body</a></td>
-        <td>&lt;body&gt;</td>
-        <td>&lt;/body&gt;</td>
-        <td>&lt;body&gt;&lt;p&gt;This is a Paragraph&lt;/p&gt;&lt;/body&gt;</td>
+        <td><a>cat</a></td>
+        <td>Displays the contents of a specified file.</td>
+        <td>cat website.html</td>
       </tr>
       <tr>
-        <td><a>Headings</a></td>
-        <td>&lt;h1&gt;-&lt;h6&gt;</td>
-        <td>&lt;/h1&gt;-&lt;/h6&gt;</td>
-        <td>&lt;h1&gt;This is a heading&lt;/h1&gt;</td>
+        <td><a>rm</a></td>
+        <td>Removes and deletes a specified file or directory. This is done without warning so do this with care.</td>
+        <td>rm website.html</td>
       </tr>
       <tr>
-        <td><a>Paragraph</a></td>
-        <td>&lt;p&gt;</td>
-        <td>&lt;/p&gt;</td>
-        <td>&lt;p&gt;This is a Paragraph&lt;/p&gt;</td>
+        <td><a>mkdir</a></td>
+        <td>Allows user to create a new empty directory.</td>
+        <td>mkdir newdirectory</td>
       </tr>
       <tr>
-        <td><a>Breaks</a></td>
-        <td>&lt;br&gt;</td>
-        <td>N/A</td>
-        <td>&lt;p&gt;asdf&lt;/p&gt;&lt;br&gt;&lt;p&gt;asdf&lt;/p&gt;</td>
+        <td><a>mv</a></td>
+        <td>Allows the user to move one or more files or directories to new locations.</td>
+        <td>mv website ~/website</td>
       </tr>
       <tr>
-        <td><a>Lines</a></td>
-        <td>&lt;hr&gt;</td>
-        <td>N/A</td>
-        <td>&lt;p&gt;asdf&lt;/p&gt;&lt;hr&gt;&lt;p&gt;asdf&lt;/p&gt;</td>
+        <td><a>chmod</a></td>
+        <td>Allows the user to change the access permission of file system objects.</td>
+        <td>chmod pistatus +x</td>
       </tr>
       <tr>
-        <td><a>Comments</a></td>
-        <td>&lt;!--</td>
-        <td>--&gt;</td>
-        <td>&lt;!-- This is a comment --&gt;</td>
+        <td><a>echo</a></td>
+        <td>Displays the string or text that is given after it.</td>
+        <td>echo "apcsp"</td>
       </tr>
       <tr>
-        <td><a>Links</a></td>
-        <td>&lt;a&gt;</td>
-        <td>&lt;/a&gt;</td>
-        <td>&lt;a href="url"&gt;Name of link&lt;/a&gt;</td>
-      </tr>
-      <tr>
-        <td><a>Images</a></td>
-        <td>&lt;img&gt;</td>
-        <td>N/A</td>
-        <td>&lt;img scr="image url"&gt;</td>
-      </tr>
-      <tr>
-        <td><a>Lists</a></td>
-        <td>&lt;ol&gt;,&lt;ul&gt;,&lt;li&gt;</td>
-        <td>&lt;/ol&gt;,&lt;/ul&gt;,&lt;/li&gt;</td>
-        <td>&lt;ol&gt;&lt;li&gt;Bob&lt;/li&gt;&lt;/ol&gt;</td>
-      </tr>
-      <tr>
-        <td><a>Tables</a></td>
-        <td>&lt;table&gt;,&lt;th&gt;,&lt;tr&gt;,&lt;td&gt;</td>
-        <td>&lt;/table&gt;,&lt;/th&gt;,&lt;/tr&gt;,&lt;/td&gt;</td>
-        <td>&lt;table&gt;&lt;tr&gt;&lt;th&gt;Table Heading&lt;/tr&gt;&lt;/tr&gt;&lt;/table&gt;</td>
+        <td><a>traceroot</a></td>
+        <td>Displays the route and measuring delays of packets across an IP network.</td>
+        <td>traceroute website.html</td>
       </tr>
     </table>
