--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p style="text-align:center">Me in my 20s</p>
   </div>
   <div class="column side">
-    <p style="text-align:center">I love food</p>
+    <p style="text-align:center">I am a student at CCA and I love food. I also love computers and am currently enrolled in APCSP to learn more about computer science. My favorite drink is boba and is something I recommend to everyone.</p>
   </div>
 </div>
     <script src="index.js"></script>
